tests/snapshots/macro_test__multiple_registers.snap
---
source: tests/macro_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:11
Lines: 3

Buffer:
A: A: line [1]
line 2 [END] [END]
line 3
