tests/snapshots/macro_test__q_basic_record.snap
---
source: tests/macro_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 2

Buffer:
[l]ine 2
line 3
