tests/snapshots/macro_test__q_record_multiple_commands.snap
---
source: tests/macro_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:14
Lines: 2

Buffer:
PREFIX: hello world
test liPREFIX:[ ]ne
